@@ -53,8 +53,9 @@ int main() {
 	find_primes_task.setCacheDirectory("cache");
 	std::thread* thread1 = find_primes_task.startOnNewThread();
 	//find_primes_task.pause();
-	//find_primes_task.resumeAndWait();
+	find_primes_task.pauseAndWait();
 	//find_primes_task.stopAndWait();
+	find_primes_task.resume();
 	//std::thread timer(&printProgress, &find_primes_task);
 	find_primes_task.finish();
 	find_primes_task.saveToFile("saved.txt");
